Fix close ogp position on mobile

--- a/app/static_src/less/pages/feed.less
+++ b/app/static_src/less/pages/feed.less
@@ -110,7 +110,7 @@
 }
 
 .comment-ogp-close {
-  left: 95%;
+  right: 10px;
   margin-top: 25px;
   position: absolute;
   display: block;
